/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Alexander Bagherzadeh
 */

package baseline;

public class Solution42 {
    public static void main(String[] args) {
        //create instance of fileIO
        FileIO fileIO = new FileIO();
        //call method to read file
        fileIO.readFile();
        //call method to print file
        fileIO.printFile();
    }
}
